--- a/animations.css
+++ b/animations.css
@@ -31,16 +31,23 @@
   }
 }
 
-@keyframes shuffle {
-  from {opacity: 1;}
-  to {opacity:0};
-}
-
-@keyframes jump-up {
+@keyframes jump {
   0% {transform: translate(0, 0);}
-  50% {transform: translate(0, 10px);}
+  50% {transform: translate(0, -10px);}
   100% {transform: translate(0, 0);}
 }
+
+@keyframes shake {
+  0% {transform: translate(0, 0);}
+  17% {transform: translate(2px, 0);}
+  33% {transform: translate(-2px, 0);}
+  50% {transform: translate(2px, 0);}
+  66% {transform: translate(-2px, 0);}
+  83% {transform: translate(2px, 0);}
+  100% {transform: translate(0, 0);}
+}
+
+
 
 @keyframes select_animation {
   from {background-color: var(--connections-beige);}
