--- a/index.css
+++ b/index.css
@@ -1,29 +1,43 @@
+@import "./animations.css";
+
 .game{
     display:flex;
     position: fixed; /* Sit on top of the page content */
     flex-direction: column;
+    justify-content:space-evenly;
+    width: 60%; /* Full width (cover the whole page) */
+    height: 67%; /* Full height (cover the whole page) */
+      top: 15%;
+      left: 20%;
+      right: 0;
+      bottom:10%;
+  z-index: -0; /* Specify a stack order in case you're using a different order for other elements */
+
+}
+
+.board_container{
+
+  padding: 20px;
+    display:flex;
+    position: fixed; /* Sit on top of the page content */
     justify-content:center;
     width: 100%; /* Full width (cover the whole page) */
-    height: 100%; /* Full height (cover the whole page) */
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
+    height: calc(3 * 8px + 4 * 80px);
+
+    top: 25%;
+    bottom:50%;
+    margin: auto;
   z-index: -0; /* Specify a stack order in case you're using a different order for other elements */
-  cursor: pointer; /* Add a pointer on hover */
 
 }
 
 .board {
-  -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
-  user-select: none; /* Standard syntax */
+
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
   height: calc(3 * 8px + 4 * 80px);
   background-color: #FFFFFF;
-  padding: 20px;
   gap:8px;
   width: calc(3 * 8px + 4 * 150px);
   min-height: 0;
@@ -31,19 +45,68 @@
   margin:auto;
   position:relative;
   /*left: 400px;*/
-  /*position:absolute;*/
+  /*position:;*/
   column-gap: 8px;
   row-gap: 8px;
-
   z-index: 1; /* Specify a stack order in case you're using a different order for other elements */
 }
 
+.matched-set {
+
+  grid-column-end: span 4;
+  border-radius: 6px;
+  padding: 20px;
+  font-size: 20px;
+  font-weight: 400;
+  text-align: center;
+  cursor: default;
+  text-transform: uppercase;
+  font-family: "Libre Franklin", sans-serif;
+  font-style: normal; 
+  z-index: -1; /* Specify a stack order in case you're using a different order for other elements */
+  position:sticky;
+  transition: background-color .25s, color .25s;
+}
+
+
+
+#yellow{
+    background-color: var(--connections-yellow);
+}
+
+#purple{
+    background-color: var(--connections-maroon);
+}
+
+#green{
+    background-color: var(--connections-green);
+}
+
+#blue{
+    background-color: var(--connections-blue);
+}
+
 .card {
-  -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
-  user-select: none; /* Standard syntax */
+
   border-radius: 6px;
   background-color: rgb(239, 239, 230);
+  padding: 20px;
+  font-size: 20px;
+  font-weight: 700;
+  text-align: center;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-family: "Libre Franklin", sans-serif;
+  font-style: normal; 
+  z-index: -1; /* Specify a stack order in case you're using a different order for other elements */
+  position:sticky;
+  transition: background-color .25s, color .25s;
+}
+
+.card:selected {
+  border-radius: 6px;
+  background-color: rgb(239, 239, 230);
+  color:rgba()
   padding: 20px;
   font-size: 20px;
   font-weight: 700;
@@ -54,88 +117,38 @@
   font-style: normal; 
   z-index: -1; /* Specify a stack order in case you're using a different order for other elements */
   position:sticky;
-}
-
-
-
-
-.selected {
-  -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
-  user-select: none; /* Standard syntax */
-
-  border-radius: 6px;
+  transition: background-color .25s, color .25s;
   background-color: var(--connections-extra-dark-beige);
-  color:#ffffff;
-  padding: 20px;
-  font-size: 20px;
-  font-weight: 700;
-  text-align: center;
-  text-transform: uppercase;
-  font-family: "Libre Franklin", sans-serif;
-  font-style: normal;
-
-  cursor: default;
 }
 
-.matched_yellow{
- -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
-  user-select: none; /* Standard syntax */
-
-  border-radius: 6px;
+.card:yellow {
   background-color: var(--connections-yellow);
-  padding: 20px;
-  text-align: center;
-  text-transform: uppercase;
-  cursor: default;
 }
 
-.matched_purple{
- -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
-  user-select: none; /* Standard syntax */
-
-  border-radius: 6px;
-  background-color: var(--connections-maroon);
-  text-align: center;
-
-  padding: 20px;
-  text-transform: uppercase;
-  cursor: default;
+.card:purple {
+  background-color: var(--connections-purple);
 }
 
-.matched_blue{
-  border-radius: 6px;
+.card:blue {
   background-color: var(--connections-blue);
-
-  padding: 20px;
-  text-align: center;
-  text-transform: uppercase;
-  cursor: default;
+  color:#ffffff;
 }
 
-.matched_green{
-     -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
-  user-select: none; /* Standard syntax */
-    padding:20px;
-  border-radius: 6px;
+.card:green {
   background-color: var(--connections-green);
-  text-align: center;
-  text-transform: uppercase;
-  cursor: default;
+  color:#ffffff;
 }
 
 
 .remaining_tries{
-
+    display:flex;
   border-radius: 6px;
-  width: 20%;
+  width: 35%;
   margin:auto;
   align:center;
   text-align: center;
   font-weight: 600;
+  font-size:16px;
   cursor: default;
 }
 
@@ -146,6 +159,7 @@
   background-color: var(--connections-extra-dark-beige);
   border-radius: 50%;
   display: inline-block;
+  transition: background-color .25s, scale .25s
 }
 
  .deactivated-dot {
@@ -157,7 +171,20 @@
   display:inline-block;
 }
 
+.cover{
+  height: calc(3 * 8px + 80px);
+  padding: 20px;
+  width: calc(3 * 8px + 4 * 150px);
+  min-height: 0;
+  min-width: 0;
+  margin:auto;
+  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+  background-color: rgba(100,100,100,.5);
+  position: fixed
+}
+
 .button{
+  cursor: pointer;
   font-size:15px;
   padding:20px;
   line-height:10px;
@@ -166,7 +193,6 @@
   height: 10px;
   margin:auto;
   align:center;
-  cursor: default;
 
   text-align: center;
   font-weight: 500;
@@ -176,6 +202,7 @@
 }
 
 .hidden_button{
+  cursor: default;
   font-size:15px;
   padding:20px;
   line-height:10px;
@@ -196,19 +223,32 @@
 
 .Buttons{
   display: flex;
+  position:relative;
+  margin-top: 10px;
   flex-direction: row;
   align-items:center;
   justify-content:center;
 }
 
-.remaining_tries{
-    display: flex;
-    font-weight:200;
-    font-size:15px;
-    font-family:"Verdana";
-    margin-bottom:20px;
-}
 
+
+.MessageBox{
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  padding:10px 18px;
+  width: max-content;
+  align-items: center;
+  text-align: center;
+  min-height: 100;
+  background-color:black;
+  color:white;
+  font-size:medium;  
+  border-radius: 6px;
+  font-weight:600;
+  opacity:0;
+  transition: opacity .25s;
+}
 
 :root{
   --connections-light-beige: #efefe6;
@@ -226,5 +266,10 @@
   font-weight: 700;
     font-family: "Libre Franklin", sans-serif;
   font-style: normal;
+  flex-shrink:0;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+
 
 }
