--- a/index.css
+++ b/index.css
@@ -1,5 +1,11 @@
 @import "./animations.css";
 
+@media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */ }j
+
+header{
+    text-align: justify;
+}
+
 h1{
     padding-top:40px;
     text-align:center;
@@ -13,18 +19,15 @@ p{
     font-weight:normal;
 }
 
+
+
 .game{
     display:flex;
-    position: fixed; /* Sit on top of the page content */
     flex-direction: column;
     justify-content:space-evenly;
-    width: 60%; /* Full width (cover the whole page) */
-    height: 70%; /* Full height (cover the whole page) */
-      top: 15%;
-      left: 20%;
-      right: 0;
-      bottom:10%;
-  z-index: -0; /* Specify a stack order in case you're using a different order for other elements */
+      z-index: -0; /* Specify a stack order in case you're using a different order for other elements */
+  margin: auto;
+  height:70vh;
 
 }
 
@@ -43,6 +46,8 @@ p{
   z-index: -0; /* Specify a stack order in case you're using a different order for other elements */
 
 }
+
+
 
 .board {
   display: grid;
@@ -212,11 +217,9 @@ input[type=text]{
 .button{
   cursor: pointer;
   font-size:15px;
-  padding:20px;
-  line-height:10px;
+  padding: 20px;
   border-radius: 60px;
   width: max-content;
-  height: 10px;
   margin:auto;
   align:center;
 
@@ -231,10 +234,8 @@ input[type=text]{
   cursor: default;
   font-size:15px;
   padding:20px;
-  line-height:10px;
   border-radius: 60px;
   width: max-content;
-  height: 10px;
   margin:auto;
   align:center;
   cursor: default;
@@ -297,9 +298,36 @@ input[type=text]{
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
-
-
 }
+
+@media screen and (max-width: 600px) {
+    :root{
+        font-size:1em;
+    }
+
+.board {
+    width: 80vw;
+  min-height: 0;
+  min-width: 0;
+  margin:auto;
+  position:relative;
+  /*left: 400px;*/
+  /*position:;*/
+  column-gap: 8px;
+  row-gap: 8px;
+  z-index: 1; /* Specify a stack order in case you're using a different order for other elements */
+}
+
+.button{
+    padding:11px;
+}
+
+.hidden_button{
+    padding:11px;
+}
+}
+
+
 
 .container{
     display:flex;
