--- a/site/animations.css
+++ b/site/animations.css
@@ -16,3 +16,17 @@
   100% {transform: translate(0, 0);}
 }
 
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+    display: none;
+  }
+
+  100% {
+    opacity: 1;
+    display: block;
+  }
+}
+
+
