--- a/site/animations.css
+++ b/site/animations.css
@@ -1,8 +1,39 @@
 @import "./index.css";
 
+@keyframes show_modal{
+    0% {opacity:0, display:none},
+    50% {opacity:1, display:block},
+    100% {opacity:0, display:none},
+}
+
+
 @keyframes jump {
   0% {transform: translate(0, 0);}
-  50% {transform: translate(0, -10px);}
+  13% {transform: translate(0, -10px);}
+  25% {transform: translate(0, 0);}
+  100% {transform: translate(0, 0);}
+}
+
+@keyframes jump2 {
+  0% {transform: translate(0, 0);}
+  25% {transform: translate(0, 0px);}
+  38% {transform: translate(0, -10px);}
+  50% {transform: translate(0, 0px);}
+  100% {transform: translate(0, 0);}
+}
+
+@keyframes jump3 {
+  0% {transform: translate(0, 0);}
+  50% {transform: translate(0, 0px);}
+  62% {transform: translate(0, -10px);}
+  75% {transform: translate(0, 0px);}
+  100% {transform: translate(0, 0);}
+}
+
+@keyframes jump4 {
+  0% {transform: translate(0, 0);}
+  75% {transform: translate(0, 0px);}
+  88% {transform: translate(0, -10px);}
   100% {transform: translate(0, 0);}
 }
 
