--- a/site/animations.css
+++ b/site/animations.css
@@ -1,9 +1,9 @@
 @import "./index.css";
 
 @keyframes show_modal{
-    0% {opacity:0, display:none},
-    50% {opacity:1, display:block},
-    100% {opacity:0, display:none},
+    0% {opacity: 0.0; display:none;}
+    50% {opacity:1.0; display:block;}
+    100% {opacity:0.0; display:none;}
 }
 
 
