--- a/site/index.css
+++ b/site/index.css
@@ -127,23 +127,27 @@ connections-set {
 }
 
 
-connections-set:state(yellow){
+connections-set[connections-color = "yellow"]{
     display:inline-block;
     background-color: var(--connections-yellow);
 }
 
-connections-set:state(green){
+
+connections-set[connections-color = "green"]{
     display:inline-block;
     background-color: var(--connections-green);
 }
 
 
-connections-set:state(purple){
+
+connections-set[connections-color = "purple"]{
     display:inline-block;
     background-color: var(--connections-maroon);
 }
 
-connections-set:state(blue){
+
+connections-set[connections-color = "blue"]{
+
     display:inline-block;
     background-color: var(--connections-blue);
 }
@@ -180,6 +184,11 @@ connections-card:state(moving){
   transition: none
 }
 
+
+connections-card:state(shuffling){
+    color: rgba(0,0,0,0);
+  transition: color .25s;
+}
 
 
 .card {
@@ -251,6 +260,11 @@ connections-card:state(moving){
   transition: background-color .25s, scale .25s
 }
 
+button.hidden {
+    opacity:0;
+}
+
+
  .dot.hidden {
   margin:auto;
   height: 15px;
@@ -295,6 +309,21 @@ button:disabled{
   cursor: default;
   border-color:var(--connections-dark-beige);
   color:var(--connections-dark-beige);
+}
+
+.end{
+   width: max-content;
+  margin: 10px auto;
+  padding:10px 18px;
+  text-align: center;
+  background-color:white;
+  color:black;
+  font-size:medium;  
+  border-radius: 6px;
+  font-weight:600;
+  transition: display .25s, opacity .25s;
+  opacity:1
+
 }
 
 
@@ -486,6 +515,7 @@ button{
   font-size:medium;  
   border-radius: 6px;
   font-weight:600;
+  border:none;
 }
 
 .pop-up.visible{
@@ -524,20 +554,7 @@ dialog[open]{
     */
 }
 
-.end.button{
-   width: max-content;
-  margin: 10px auto;
-  padding:10px 18px;
-  text-align: center;
-  background-color:white;
-  color:black;
-  font-size:medium;  
-  border-radius: 6px;
-  font-weight:600;
-  transition: display .25s, opacity .25s;
-  opacity:1
 
-}
 
 .pop-up.enabled{
     display:block;
